# financial-agent

./: .env.example  .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  setup_check.py  uv.lock.bak
config/: __init__.py  model_config.py
data/eval/: QUANTIFICATION_GUIDE.md  chunk_report.json  eval_financebench.py  financebench_golden.json  financebench_report.json  financebench_report_e2e.json  golden_queries.example.json  last_report.json  report_e2e_14b_150_e2e.json  report_e2e_14b_e2e.json  report_e2e_20_e2e.json  report_e2e_full_e2e.json  report_e2e_qwen3_e2e.json  report_filtered.json  report_full.json  report_full_e2e.json
src/: __init__.py  agent.py  eval_rag.py  ingestion.py  rag_chain.py  tools.py  train.py
