[project]
name = "financial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "crawlee>=1.5.0",
    "datasets>=4.8.2",
    "langchain>=0.3.28",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "openai>=2.29.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sec-edgar-downloader>=5.1.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "tavily-python>=0.7.23",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
